--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Vine_Review_Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOvX2ToQhPFhc6Gh9ni/6h",
+      "authorship_tag": "ABX9TyNfkyeS0bdjG7eFxzOFbk3Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -215,6 +215,32 @@
             "only showing top 20 rows\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dOLNpfWmHL6Q",
+        "outputId": "197ccf8c-4eea-4195-e6f3-009f333c353b"
+      },
+      "source": [
+        "vine_df.count()"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3105520"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
         }
       ]
     },
